// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`slice 3: review screen banding + focus + pin truecolor: focused record at index 0 carries the rounded focus box; nothing else does 1`] = `
"                                                                                                    
  LabelLens  tiny.jsonl  Pending  1 / 10           Reviewed: 0 / 10  ·  Skipped: 0  ·  Pending: 10  
                                                                                                    
  Pending ────────────────────────────────────────────────────────────  1 / 10                      
                                                                                                    
                                                                                                    
                                                                                                    
 ╭────────────────────────────────────────────────────────────────────────────────────────────────╮ 
 │ Lunch at Zomato Bangalore                                                                      │ 
 ╰────────────────────────────────────────────────────────────────────────────────────────────────╯ 
  █ Uber ride to airport                                                                            
  ▆ Amazon order #12345                                                                             
                                                                                                    
  prediction ────────────────────────────────────────────────────────────                           
  label      ◇ food                                                                                 
  confidence ████████░  92%                                                                         
  source     [llm:gpt-4]                                                                            
                                                                                                    
  labels ────────────────────────────────────────────────────────────                               
  ▸1 food 92%     2 travel     3 other                                                              
                                                                                                    
                                                                                                    
  [a] accept ┊[r] relabel ┊[x] reject ┊[s] skip ┊[n] note ┊[gd] doc ┊[Q] queues ┊[:] palette ┊[t] … 
                                                                                                    
"
`;

exports[`slice 3: review screen banding + focus + pin truecolor: pressing 'j' moves the focus box to next record 1`] = `
"                                                                                                    
  LabelLens  tiny.jsonl  Pending  2 / 10           Reviewed: 0 / 10  ·  Skipped: 0  ·  Pending: 10  
                                                                                                    
  Pending ────────────────────────────────────────────────────────────  2 / 10                      
                                                                                                    
                                                                                                    
  █ Lunch at Zomato Bangalore                                                                       
 ╭────────────────────────────────────────────────────────────────────────────────────────────────╮ 
 │ Uber ride to airport                                                                           │ 
 ╰────────────────────────────────────────────────────────────────────────────────────────────────╯ 
  ▆ Amazon order #12345                                                                             
  ▄ Netflix monthly                                                                                 
                                                                                                    
  prediction ────────────────────────────────────────────────────────────                           
  label      ◇ travel                                                                               
  confidence ████████░  88%                                                                         
  source     [llm:gpt-4]                                                                            
                                                                                                    
  labels ────────────────────────────────────────────────────────────                               
   1 food    ▸2 travel 88%     3 other                                                              
                                                                                                    
                                                                                                    
  [a] accept ┊[r] relabel ┊[x] reject ┊[s] skip ┊[n] note ┊[gd] doc ┊[Q] queues ┊[:] palette ┊[t] … 
                                                                                                    
"
`;

exports[`slice 3: review screen banding + focus + pin 16-color: plain border + ▶ marker on focused, │ on context 1`] = `
"                                                                                                    
  LabelLens  tiny.jsonl  Pending  1 / 10           Reviewed: 0 / 10  ·  Skipped: 0  ·  Pending: 10  
                                                                                                    
  Pending ────────────────────────────────────────────────────────────  1 / 10                      
                                                                                                    
                                                                                                    
                                                                                                    
 ┌────────────────────────────────────────────────────────────────────────────────────────────────┐ 
 │ ▶ Lunch at Zomato Bangalore                                                                    │ 
 └────────────────────────────────────────────────────────────────────────────────────────────────┘ 
  █ Uber ride to airport                                                                            
  ▆ Amazon order #12345                                                                             
                                                                                                    
  prediction ────────────────────────────────────────────────────────────                           
  label      ◇ food                                                                                 
  confidence ########-  92%                                                                         
  source     [llm:gpt-4]                                                                            
                                                                                                    
  labels ────────────────────────────────────────────────────────────                               
  ▸1 food 92%     2 travel     3 other                                                              
                                                                                                    
                                                                                                    
  [a] accept ┊[r] relabel ┊[x] reject ┊[s] skip ┊[n] note ┊[gd] doc ┊[Q] queues ┊[:] palette ┊[t] … 
                                                                                                    
"
`;

exports[`slice 3: review screen banding + focus + pin mono: same plain border + markers as 16-color 1`] = `
"                                                                                                    
  LabelLens  tiny.jsonl  Pending  1 / 10           Reviewed: 0 / 10  ·  Skipped: 0  ·  Pending: 10  
                                                                                                    
  Pending ────────────────────────────────────────────────────────────  1 / 10                      
                                                                                                    
                                                                                                    
                                                                                                    
 ┌────────────────────────────────────────────────────────────────────────────────────────────────┐ 
 │ ▶ Lunch at Zomato Bangalore                                                                    │ 
 └────────────────────────────────────────────────────────────────────────────────────────────────┘ 
  █ Uber ride to airport                                                                            
  ▆ Amazon order #12345                                                                             
                                                                                                    
  prediction ────────────────────────────────────────────────────────────                           
  label      ◇ food                                                                                 
  confidence ########-  92%                                                                         
  source     [llm:gpt-4]                                                                            
                                                                                                    
  labels ────────────────────────────────────────────────────────────                               
  ▸1 food 92%     2 travel     3 other                                                              
                                                                                                    
                                                                                                    
  [a] accept ┊[r] relabel ┊[x] reject ┊[s] skip ┊[n] note ┊[gd] doc ┊[Q] queues ┊[:] palette ┊[t] … 
                                                                                                    
"
`;

exports[`slice 3: review screen banding + focus + pin 256-color: rounded border, no left-edge markers (banding does the work) 1`] = `
"                                                                                                    
  LabelLens  tiny.jsonl  Pending  1 / 10           Reviewed: 0 / 10  ·  Skipped: 0  ·  Pending: 10  
                                                                                                    
  Pending ────────────────────────────────────────────────────────────  1 / 10                      
                                                                                                    
                                                                                                    
                                                                                                    
 ╭────────────────────────────────────────────────────────────────────────────────────────────────╮ 
 │ Lunch at Zomato Bangalore                                                                      │ 
 ╰────────────────────────────────────────────────────────────────────────────────────────────────╯ 
  █ Uber ride to airport                                                                            
  ▆ Amazon order #12345                                                                             
                                                                                                    
  prediction ────────────────────────────────────────────────────────────                           
  label      ◇ food                                                                                 
  confidence ████████░  92%                                                                         
  source     [llm:gpt-4]                                                                            
                                                                                                    
  labels ────────────────────────────────────────────────────────────                               
  ▸1 food 92%     2 travel     3 other                                                              
                                                                                                    
                                                                                                    
  [a] accept ┊[r] relabel ┊[x] reject ┊[s] skip ┊[n] note ┊[gd] doc ┊[Q] queues ┊[:] palette ┊[t] … 
                                                                                                    
"
`;

exports[`slice 3: review screen banding + focus + pin truecolor + dark theme: rounded border, accent border color differs from light 1`] = `
"                                                                                                    
  LabelLens  tiny.jsonl  Pending  1 / 10           Reviewed: 0 / 10  ·  Skipped: 0  ·  Pending: 10  
                                                                                                    
  Pending ────────────────────────────────────────────────────────────  1 / 10                      
                                                                                                    
                                                                                                    
                                                                                                    
 ╭────────────────────────────────────────────────────────────────────────────────────────────────╮ 
 │ Lunch at Zomato Bangalore                                                                      │ 
 ╰────────────────────────────────────────────────────────────────────────────────────────────────╯ 
  █ Uber ride to airport                                                                            
  ▆ Amazon order #12345                                                                             
                                                                                                    
  prediction ────────────────────────────────────────────────────────────                           
  label      ◇ food                                                                                 
  confidence ████████░  92%                                                                         
  source     [llm:gpt-4]                                                                            
                                                                                                    
  labels ────────────────────────────────────────────────────────────                               
  ▸1 food 92%     2 travel     3 other                                                              
                                                                                                    
                                                                                                    
  [a] accept ┊[r] relabel ┊[x] reject ┊[s] skip ┊[n] note ┊[gd] doc ┊[Q] queues ┊[:] palette ┊[t] … 
                                                                                                    
"
`;

exports[`slice 3: review screen banding + focus + pin display.banding = off at truecolor: rounded border still present, no banding bg 1`] = `
"                                                                                                    
  LabelLens  tiny.jsonl  Pending  1 / 10           Reviewed: 0 / 10  ·  Skipped: 0  ·  Pending: 10  
                                                                                                    
  Pending ────────────────────────────────────────────────────────────  1 / 10                      
                                                                                                    
                                                                                                    
                                                                                                    
 ╭────────────────────────────────────────────────────────────────────────────────────────────────╮ 
 │ Lunch at Zomato Bangalore                                                                      │ 
 ╰────────────────────────────────────────────────────────────────────────────────────────────────╯ 
  █ Uber ride to airport                                                                            
  ▆ Amazon order #12345                                                                             
                                                                                                    
  prediction ────────────────────────────────────────────────────────────                           
  label      ◇ food                                                                                 
  confidence ████████░  92%                                                                         
  source     [llm:gpt-4]                                                                            
                                                                                                    
  labels ────────────────────────────────────────────────────────────                               
  ▸1 food 92%     2 travel     3 other                                                              
                                                                                                    
                                                                                                    
  [a] accept ┊[r] relabel ┊[x] reject ┊[s] skip ┊[n] note ┊[gd] doc ┊[Q] queues ┊[:] palette ┊[t] … 
                                                                                                    
"
`;
